# Materov23-package

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
esp32/esp32MATEROV/: platformio.ini
esp32/esp32MATEROV/include/: ota_server.h  pwm_driver.h  ros_functs.h  wifi_functs.h
esp32/esp32MATEROV/lib/ros_lib/materov22_pioneer/: motion_control_msg.h  sensor_data_msg.h
esp32/esp32MATEROV/src/: OTAServer.cpp  main.cpp  pwm_driver.cpp  ros_functs.cpp  wififuncts.cpp
include/: ros_functs.h
launch/: materov.launch  pi.launch
msg/: MotionCommand.msg  PWMValues  controller.msg  motion_command_msg.msg  motion_control_msg.msg  sensor_data_msg.msg
scripts/: calc.py  joy.py  processor.py  rotation_stabiliser.py  stick.py
src/: CMakeLists.txt  motion_command_executer.cpp  motion_command_executer.h  motion_commands.h
src/camera/launch/: elp.launch
src/joystick/: input.cpp  joystick.cpp  joystick_input.cpp  output.cpp
src/motion_command_executer/: CMakeLists.txt  motion_command_executer.cpp  motion_command_executer.h
src/motion_command_executer/pid_controller/: pid_controller.cpp  pid_controller.h
src/motion_command_executer/ros_functs/: ros_functs.cpp
src/motion_command_executer/thrustered_vehicle_motion_controller/: thrustered_vehicle_motion_controller.cpp  thrustered_vehicle_motion_controller.h  vehicle_config.h
src/motion_command_executer/thrustered_vehicle_motion_controller/thrusters_controller/: thrusters_controller.cpp  thrusters_controller.h
src/ros_functs/: ros_functs.cpp  ros_functs.h  rosfuncts.cpp
webpage/: page_ros_test.html
